# pie-menu-editor-fork

./: .claudeignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CORE_LAYER_DESIGN_GUIDE.md  C_UTILS_MODERNIZATION.md  HANDOVER_MEMO.md  LICENSE.md  README.md  STRUCTURE_ANALYSIS.md  TESTING_GUIDE.md  UPDATE_SUMMARY.md  __init__.py  _test_gpu_layout.py  addon.py  bl_utils.py  blender_manifest.toml  c_utils.py  collection_utils.py  compatibility_fixes.py  constants.py  debug_utils.py  ed_base.py  ed_hpanel_group.py  ed_macro.py  ed_menu.py  ed_modal.py  ed_panel_group.py  ed_pie_menu.py  ed_popup.py  ed_property.py  ed_stack_key.py  ed_sticky_key.py  extra_operators.py  keymap_helper.py  (+21 more)
.claude/: INDEX.md
.claude/agents/: deps-log-analyzer.md
.claude/rules/: architecture.md  bpy_imports.md  cleanup_workflow.md  compatibility.md  core_layer_design.md  dependency_cleanup_plan.md  editor_dependency_map.md  json_schema_v2.md  milestones.md  operators_reorganization.md  pme_api_current.md  pme_api_plan.md  pme_standard_namespace.md  runtime_lifecycle.md  testing.md  ui_list_analysis.md
.claude/scripts/: analyze_deps_log.py
.claude/skills/: release-notes.md
.cursor/: violation_analysis.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  docs-request.md  feature-request.md  workflow-improvement.md
.github/workflows/: release.yml
_docs/: INDEX.md
_docs/analysis/: performance_bottlenecks.md
_docs/archive/: architecture_full.md  milestones_full.md  pme_api_facade.md  runtime_lifecycle.md
_docs/core-layer/: CORE_LAYER_DESIGN_GUIDE.md  pmeprops-schema-system.md
_docs/design/: PME2_FEATURE_REQUESTS.md  blender_source_investigation.md  design_decisions.md  dynamic_description_design.md  dynamic_description_expansion.md  gpu_dialog_implementation.md  gpu_layout_architecture_v2.1.md  gpu_layout_architecture_v2.md  gpu_layout_architecture_v3.md  gpu_layout_issues_report.md  gpu_layout_milestones.md  gpu_layout_prop_implementation_plan.md  gpu_panel_operator.md  gpu_phase0_architecture.md  gpu_prop_widget_mapping_blender.md  gpu_reactive_context_architecture.md  gpu_reactive_context_architecture.review.md  gpu_reactive_context_plan_v2.md  gpu_theme_widget_mapping.md  gpu_uilayout_compatibility_matrix.md  issue_gap_supplements.md  json_schema_v2.md  macro_improvements.md  prefix_standardization_analysis.md  prefs_data_analysis.md  schema-rename-plan.md  schema_v2_analysis.md  user_pie_menu_call_analysis.md
_docs/gpu_layout/: blender_align_pass_plan.md  blender_compat_todo.md  next_steps_todo.md
_docs/guides/: distributed_agent_coordination.md  operators_reorganization.md  phase9_implementation.md  rc_roadmap.md
_docs/investigations/: popup-mouse-outside-close.md
_docs/issues/: 9d1_diagnosis.md  9d2_hpg_diagnosis.md  9d4_diagnosis.md
api/: __init__.py  _types.py  constants.py  dev.py  execution.py  menu.py  pme_types.py  validation.py
assets/examples/: window_area_pie.json
assets/scripts/: command_area_join.py  command_area_move.py  command_area_split.py  custom_hello_world.py  test_gpu_reactive_context.py  test_namespace.py
core/: __init__.py  constants.py  namespace.py  props.py  schema.py  uid.py
debug/: class_diagram.mmd
docs/: api_pme.md  pme_architecture_slides.html
docs/architecture/: conf_example.py  requirements.txt
editor/: ed_base.py  ed_hpanel_group.py  ed_macro.py  ed_menu.py  ed_modal.py  ed_panel_group.py  ed_pie_menu.py  ed_popup.py  ed_property.py  ed_stack_key.py  ed_sticky_key.py  editor.py  hpanel_group.py  macro.py  menu.py  modal.py  panel_group.py  pie_menu.py  popup.py  property.py  stack_key.py  sticky_key.py
editors/: __init__.py  base.py  hpanel_group.py  macro.py  menu.py  modal.py  panel_group.py  pie_menu.py  popup.py  property.py  stack_key.py  sticky_key.py
examples/: toolbar_top.json  window_area_pie.json
infra/: __init__.py  collections.py  compat.py  debug.py  extend.py  io.py  macro.py  modal.py  overlay.py  previews.py  property.py  runtime_context.py  selection.py
operators/: __init__.py  hotkey.py  io.py  panel.py  script.py  search.py  utils.py
operators/ed/: __init__.py  gpu_ops.py  icon.py  keymap.py  pm.py  pmi.py  poll.py  settings.py  tags.py
operators/extras/: __init__.py  area.py  popup.py  sidearea.py  utils.py
prefs/: __init__.py  context_menu.py  helpers.py  lists.py  operators.py  pm_ops.py  pmi_data.py  temp_data.py  tree.py
resources/examples/: context_sensitive_menu.json
resources/scripts/: area_join.py  area_move.py  area_split.py  command_context_sensitive_menu.py  command_localview.py  command_panel.py  context_sensitive_menu.py  hello_world.py  local_view.py  panel.py  return_value.py
scripts/: command_area_join.py  command_area_move.py  command_area_split.py  command_localview.py  command_panel.py  custom_hello_world.py  test_namespace.py
scripts/autorun/: functions.py
tools/: blender_icon_fetch.py
ui/: __init__.py  descriptions.py  gpu_layout.py  layout.py  panels.py  screen.py  test_gpu_layout.py  utils.py
ui/gpu/: __init__.py  binding.py  context.py  drawing.py  execution.py  interactive.py  items.py  layout.py  panel_manager.py  panel_mixin.py  rna_utils.py  state.py  style.py  test_layout.py  test_uilayout_behavior.py  tooltip.py  uilayout_stubs.py  widget_factory.py
(+50 files in other folders)
